--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aga-core",
-  "version": "1.0.1-34",
+  "version": "1.0.1-34-s",
   "description": "",
   "main": "index.js",
   "scripts": {
