--- a/package.json
+++ b/package.json
@@ -1,23 +1,48 @@
 {
   "name": "aga-core",
-  "version": "1.0.0",
+  "version": "1.1.0-SNAPSHOT",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "typings": "types/index.d.ts",
   "scripts": {
-    "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node lib/index",
+    "build": "tsc  && npm run docs",
+    "docs": "typedoc --out docs --theme minimal --mode file src",
+    "test": "nyc --reporter=junit mocha --reporter mocha-junit-reporter test/*",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Agamand <basset.cyril@gmail.com>",
+  "license": "MIT",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/mongodb": "^3.0.19",
+    "@types/nedb": "^1.8.5",
+    "@types/request": "^2.47.0",
+    "adm-zip": "^0.4.11",
     "express": "^4.16.2",
     "fetch-swagger-schema": "^0.1.2",
     "js-yaml": "^3.11.0",
     "log4js": "^2.5.3",
     "moment": "^2.20.1",
-    "nedb": "^1.8.0"
+    "mongodb": "^3.0.10",
+    "nedb": "^1.8.0",
+    "reflect-metadata": "^0.1.12"
   },
   "publishConfig": {
     "registry": "http://npm.agamand.com"
+  },
+  "devDependencies": {
+    "@types/adm-zip": "^0.4.31",
+    "@types/node": "^10.3.2",
+    "coveralls": "^3.0.1",
+    "istanbul": "^0.4.5",
+    "jenkins-mocha": "^6.0.0",
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.17.0",
+    "mocha-typescript": "^1.1.16",
+    "typedoc": "^0.11.1",
+    "typescript": "^2.9.1"
   }
 }
