--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "aga-core",
-  "version": "1.1.0-SNAPSHOT",
+  "version": "1.1.0-SNAPSHOT.2",
   "description": "",
   "main": "lib/index.js",
   "module": "lib/index.js",
   "typings": "types/index.d.ts",
   "scripts": {
     "start": "npm run build && node lib/index",
+    "prepack": "npm run build",
     "build": "tsc  && npm run docs",
     "docs": "typedoc --out docs --theme minimal --mode file src",
     "test": "nyc --reporter=junit mocha --reporter mocha-junit-reporter test/*",
