--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "npm run build && node lib/index",
     "prepack": "npm run build",
-    "build": "tsc  && npm run docs",
+    "clean": "rimraf lib types",
+    "build": "npm run clean && tsc  && npm run docs",
     "docs": "typedoc --out docs --theme minimal --mode file src",
     "test": "nyc --reporter=junit mocha --reporter mocha-junit-reporter test/*",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
@@ -16,14 +17,14 @@
   "author": "Agamand <basset.cyril@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/request": "^2.47.0",
     "adm-zip": "^0.4.11",
     "express": "^4.16.2",
     "log4js": "^2.5.3",
     "moment": "^2.20.1",
     "mongodb": "^3.0.10",
     "nedb": "^1.8.0",
-    "reflect-metadata": "^0.1.12",
-    "@types/request": "^2.47.0"
+    "reflect-metadata": "^0.1.12"
   },
   "publishConfig": {
     "registry": "http://npm.agamand.com"
@@ -42,6 +43,7 @@
     "mocha-junit-reporter": "^1.17.0",
     "mocha-typescript": "^1.1.16",
     "typedoc": "^0.11.1",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "rimraf": "^2.6.2"
   }
 }
