--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/request": "^2.47.0",
     "adm-zip": "^0.4.11",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "log4js": "^2.5.3",
     "moment": "^2.20.1",
@@ -30,11 +31,12 @@
     "registry": "http://npm.agamand.com"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.31",
     "@types/body-parser": "^1.17.0",
+    "@types/cookie-session": "^2.0.35",
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.0.19",
     "@types/nedb": "^1.8.5",
-    "@types/adm-zip": "^0.4.31",
     "@types/node": "^10.3.2",
     "coveralls": "^3.0.1",
     "istanbul": "^0.4.5",
@@ -42,8 +44,8 @@
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.17.0",
     "mocha-typescript": "^1.1.16",
+    "rimraf": "^2.6.2",
     "typedoc": "^0.11.1",
-    "typescript": "^2.9.1",
-    "rimraf": "^2.6.2"
+    "typescript": "^2.9.1"
   }
 }
