--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "clean": "rimraf lib types",
     "build": "npm run clean && tsc  && npm run docs",
     "docs": "typedoc --out docs --theme minimal --mode file src",
-    "test": "nyc --reporter=junit mocha --reporter mocha-junit-reporter test/*",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "pretest": "rimraf test/lib && tsc -p test/tsconfig.json",
+    "test": "nyc --reporter=junit mocha --reporter mocha-junit-reporter test/lib/*.spec.js",
+    "coverage": "nyc report --reporter=cobertura"
   },
   "author": "Agamand <basset.cyril@gmail.com>",
   "license": "MIT",
@@ -33,14 +34,19 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.31",
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.4",
     "@types/cookie-session": "^2.0.35",
     "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.5",
     "@types/mongodb": "^3.0.19",
     "@types/nedb": "^1.8.5",
     "@types/node": "^10.3.2",
+    "chai": "^4.1.2",
     "coveralls": "^3.0.1",
+    "i": "^0.3.6",
     "istanbul": "^0.4.5",
     "jenkins-mocha": "^6.0.0",
+    "junit": "^1.4.9",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.17.0",
     "mocha-typescript": "^1.1.16",
