--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,11 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "moduleResolution": "node",
-    "module": "CommonJS",
-    "lib": ["es2015", "es2016", "es2017"],
-    "esModuleInterop": true,
-    "target": "ES2017",
     "noImplicitAny": true,
     "sourceMap": true,
-    "outDir": "lib",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "declaration": true,
     "declarationDir": "types",
+    "outDir": "lib"
   },
   "include": [
     "src/**/*"
