--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/adm-zip": "^0.4.31",
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.4",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/cookie-session": "^2.0.35",
     "@types/express": "^4.16.0",
     "@types/mocha": "^5.2.5",
@@ -42,6 +43,7 @@
     "@types/nedb": "^1.8.5",
     "@types/node": "^10.3.2",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.1",
     "i": "^0.3.6",
     "istanbul": "^0.4.5",
@@ -52,6 +54,6 @@
     "mocha-typescript": "^1.1.16",
     "rimraf": "^2.6.2",
     "typedoc": "^0.11.1",
-    "typescript": "^2.9.1"
+    "typescript": "^3.0.1"
   }
 }
