--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aga-core",
-  "version": "1.1.0-SNAPSHOT",
+  "version": "1.1.0",
   "description": "",
   "main": "lib/index.js",
   "module": "lib/index.js",
