--- a/package.json
+++ b/package.json
@@ -18,35 +18,25 @@
   "author": "Agamand <basset.cyril@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/request": "^2.47.0",
+    "log4js": "^3.0.5",
+    "reflect-metadata": "^0.1.12",
     "adm-zip": "^0.4.11",
-    "aga-rest-decorator": "^1.0.0-SNAPSHOT",
+    "aga-rest-decorator": "1.2.0-SNAPSHOT",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
-    "log4js": "^3.0.5",
-    "moment": "^2.20.1",
-    "mongodb": "^3.0.10",
-    "nedb": "^1.8.0",
-    "reflect-metadata": "^0.1.12"
+    "moment": "^2.20.1"
   },
   "publishConfig": {
     "registry": "http://npm.agamand.com"
   },
   "devDependencies": {
-    "@types/adm-zip": "^0.4.31",
-    "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
-    "@types/cookie-session": "^2.0.35",
-    "@types/express": "^4.16.0",
     "@types/mocha": "^5.2.5",
-    "@types/mongodb": "^3.0.19",
-    "@types/nedb": "^1.8.5",
     "@types/node": "^10.3.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.1",
-    "i": "^0.3.6",
     "istanbul": "^0.4.5",
     "jenkins-mocha": "^6.0.0",
     "junit": "^1.4.9",
@@ -55,6 +45,11 @@
     "mocha-typescript": "^1.1.16",
     "rimraf": "^2.6.2",
     "typedoc": "^0.12.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "@types/request": "^2.47.0",
+    "@types/adm-zip": "^0.4.31",
+    "@types/body-parser": "^1.17.0",
+    "@types/cookie-session": "^2.0.35",
+    "@types/express": "^4.16.0"
   }
 }
