--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "aga-rest-decorator": "1.2.0-SNAPSHOT",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
-    "moment": "^2.20.1"
+    "moment": "^2.20.1",
+    "request": "^2.88.0"
   },
   "publishConfig": {
     "registry": "http://npm.agamand.com"
@@ -46,7 +47,7 @@
     "rimraf": "^2.6.2",
     "typedoc": "^0.12.0",
     "typescript": "^3.0.1",
-    "@types/request": "^2.47.0",
+    "@types/request": "^2.48.1",
     "@types/adm-zip": "^0.4.31",
     "@types/body-parser": "^1.17.0",
     "@types/cookie-session": "^2.0.35",
