--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "typings": "types/index.d.ts",
   "scripts": {
     "start": "npm run build && node lib/index",
+    "start:dev": "npm run build:watch && node lib/index",
     "prepack": "npm run build",
     "clean": "rimraf lib types",
     "build": "npm run clean && tsc  && npm run docs",
+    "build:watch": "tsc -w",
     "docs": "typedoc --out docs --theme minimal --mode file src",
     "test": "nyc --reporter=junit mocha --reporter mocha-junit-reporter lib/tests/*.spec.js --exit || echo Failing tests",
     "test:mocha": "mocha lib/tests/*.spec.js --exit || echo Failing tests",
@@ -47,6 +49,8 @@
     "rimraf": "^2.6.2",
     "typedoc": "^0.12.0",
     "typescript": "^3.2.1",
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.9",
     "@types/request": "^2.48.1",
     "@types/adm-zip": "^0.4.31",
     "@types/body-parser": "^1.17.0",
