--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aga-core",
-  "version": "1.2.0-SNAPSHOT",
+  "name": "springlike",
+  "version": "1.3.0-SNAPSHOT",
   "description": "",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -23,7 +23,7 @@
     "reflect-metadata": "^0.1.12",
     "log4js": "^3.0.6",
     "adm-zip": "^0.4.11",
-    "aga-rest-decorator": "1.2.0-SNAPSHOT",
+    "springlike-rest-decorator": "1.3.0-SNAPSHOT",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "moment": "^2.20.1",
@@ -36,7 +36,7 @@
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.3.2",
+    "@types/node": "^12.11.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.1",
@@ -48,7 +48,7 @@
     "mocha-typescript": "^1.1.16",
     "rimraf": "^2.6.2",
     "typedoc": "^0.12.0",
-    "typescript": "^3.2.1",
+    "typescript": "^3.7.0-beta",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.9",
     "@types/request": "^2.48.1",
