--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "springlike",
+  "name": "@springlike/core",
   "version": "1.3.0-SNAPSHOT",
   "description": "",
   "main": "lib/index.js",
@@ -23,7 +23,7 @@
     "reflect-metadata": "^0.1.12",
     "log4js": "^3.0.6",
     "adm-zip": "^0.4.11",
-    "springlike-rest-decorator": "1.3.0-SNAPSHOT",
+    "@springlike/rest-decorator": "1.3.0-SNAPSHOT",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "moment": "^2.20.1",
@@ -48,7 +48,7 @@
     "mocha-typescript": "^1.1.16",
     "rimraf": "^2.6.2",
     "typedoc": "^0.15.0",
-    "typescript": "^3.7.0-beta",
+    "typescript": "^3.7.3",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.9",
     "@types/request": "^2.48.1",
