--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "log4js": "^3.0.6",
     "adm-zip": "^0.4.11",
     "@springlike/rest-decorator": "1.3.0-SNAPSHOT",
+    "@springlike/type-registry": "1.3.0-SNAPSHOT",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "moment": "^2.20.1",
