--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "request": "^2.88.0"
   },
   "publishConfig": {
-    "registry": "http://npm.agamand.com"
+    "registry": "https://npm.agamand.com"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
