--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@springlike/core",
-  "version": "1.4.0-SNAPSHOT",
+  "version": "1.5.0-SNAPSHOT",
   "description": "",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -23,8 +23,8 @@
     "reflect-metadata": "^0.1.13",
     "log4js": "^3.0.6",
     "adm-zip": "^0.4.11",
-    "@springlike/rest-decorator": "1.4.0-SNAPSHOT",
-    "@springlike/type-registry": "1.4.0-SNAPSHOT",
+    "@springlike/rest-decorator": "1.5.0-SNAPSHOT",
+    "@springlike/type-registry": "1.5.0-SNAPSHOT",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "moment": "^2.20.1",
@@ -48,8 +48,8 @@
     "mocha-junit-reporter": "^1.17.0",
     "mocha-typescript": "^1.1.16",
     "rimraf": "^2.6.2",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.8.3",
+    "typedoc": "^0.17.4",
+    "typescript": "^3.8.3-apm",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.9",
     "@types/request": "^2.48.1",
@@ -57,5 +57,6 @@
     "@types/body-parser": "^1.17.0",
     "@types/cookie-session": "^2.0.35",
     "@types/express": "^4.16.0"
-  }
+  },
+  "src": "src"
 }
